--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
-    "amplitudejs": "^5.0.3"
+    "amplitudejs": "^5.0.3",
+    "imagemin": "^7.0.1"
   }
 }
